# phony

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  libenv.sh
data/: config.lua  test.tga
src/: gmain.cpp  phony.hpp  stdinc.hpp
src/fwk/: estate.cpp  estate.hpp  game.cpp  game.hpp  gstate.cpp  gstate.hpp  gstatea.cpp  gstatea.hpp  lgstate.hpp  mgrbase.hpp  smgr.cpp  smgr.hpp  stmgr.hpp  tmgr.cpp  tmgr.hpp
src/phony/: stdinc.hpp
src/phony/fwk/: estate.hpp  game.cpp  game.hpp  gstate.hpp  gstatea.cpp  gstatea.hpp  scene.cpp  scene.hpp  smgr.hpp  tmgr.cpp  tmgr.hpp
src/phony/util/: camera.cpp  lscape.hpp  luaconf.cpp  luaconf.hpp  perlin.cpp  prim.cpp  prim.hpp  rgba.cpp  rgba.hpp  text.cpp  text.hpp  tga.hpp  timer.hpp  tweener.hpp
src/util/: bmp.cpp  bmp.hpp  camera.cpp  camera.hpp  light.cpp  light.hpp  lscape.cpp  lscape.hpp  luaconf.cpp  luaconf.hpp  perlin.cpp  perlin.hpp  prim.cpp  prim.hpp  rgba.cpp  rgba.hpp  strutil.cpp  strutil.hpp  tga.cpp  tga.hpp  tweener.hpp
