cmake_minimum_required(VERSION 3.15)
project(phony)

set(CMAKE_CXX_STANDARD 14)

find_package(PkgConfig REQUIRED)
pkg_check_modules(SDL2 REQUIRED sdl2)
pkg_check_modules(SDL2MIXER REQUIRED SDL2_mixer)
pkg_check_modules(SDL2TTF REQUIRED SDL2_ttf)
pkg_check_modules(LUA REQUIRED lua)

include_directories(libs/glm)
include_directories(src/phony)
include_directories(src/phony/fwk)
include_directories(src/phony/util)

file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(phony
        libs/glm/glm/detail/_features.hpp
        libs/glm/glm/detail/_fixes.hpp
        libs/glm/glm/detail/_literals.hpp
        libs/glm/glm/detail/_noise.hpp
        libs/glm/glm/detail/_swizzle.hpp
        libs/glm/glm/detail/_swizzle_func.hpp
        libs/glm/glm/detail/_vectorize.hpp
        libs/glm/glm/detail/func_common.hpp
        libs/glm/glm/detail/func_common.inl
        libs/glm/glm/detail/func_exponential.hpp
        libs/glm/glm/detail/func_exponential.inl
        libs/glm/glm/detail/func_geometric.hpp
        libs/glm/glm/detail/func_geometric.inl
        libs/glm/glm/detail/func_integer.hpp
        libs/glm/glm/detail/func_integer.inl
        libs/glm/glm/detail/func_matrix.hpp
        libs/glm/glm/detail/func_matrix.inl
        libs/glm/glm/detail/func_noise.hpp
        libs/glm/glm/detail/func_noise.inl
        libs/glm/glm/detail/func_packing.hpp
        libs/glm/glm/detail/func_packing.inl
        libs/glm/glm/detail/func_trigonometric.hpp
        libs/glm/glm/detail/func_trigonometric.inl
        libs/glm/glm/detail/func_vector_relational.hpp
        libs/glm/glm/detail/func_vector_relational.inl
        libs/glm/glm/detail/glm.cpp
        libs/glm/glm/detail/hint.hpp
        libs/glm/glm/detail/intrinsic_common.hpp
        libs/glm/glm/detail/intrinsic_common.inl
        libs/glm/glm/detail/intrinsic_exponential.hpp
        libs/glm/glm/detail/intrinsic_exponential.inl
        libs/glm/glm/detail/intrinsic_geometric.hpp
        libs/glm/glm/detail/intrinsic_geometric.inl
        libs/glm/glm/detail/intrinsic_integer.hpp
        libs/glm/glm/detail/intrinsic_integer.inl
        libs/glm/glm/detail/intrinsic_matrix.hpp
        libs/glm/glm/detail/intrinsic_matrix.inl
        libs/glm/glm/detail/intrinsic_trigonometric.hpp
        libs/glm/glm/detail/intrinsic_trigonometric.inl
        libs/glm/glm/detail/intrinsic_vector_relational.hpp
        libs/glm/glm/detail/intrinsic_vector_relational.inl
        libs/glm/glm/detail/precision.hpp
        libs/glm/glm/detail/precision.inl
        libs/glm/glm/detail/setup.hpp
        libs/glm/glm/detail/type_float.hpp
        libs/glm/glm/detail/type_gentype.hpp
        libs/glm/glm/detail/type_gentype.inl
        libs/glm/glm/detail/type_half.hpp
        libs/glm/glm/detail/type_half.inl
        libs/glm/glm/detail/type_int.hpp
        libs/glm/glm/detail/type_mat.hpp
        libs/glm/glm/detail/type_mat.inl
        libs/glm/glm/detail/type_mat2x2.hpp
        libs/glm/glm/detail/type_mat2x2.inl
        libs/glm/glm/detail/type_mat2x3.hpp
        libs/glm/glm/detail/type_mat2x3.inl
        libs/glm/glm/detail/type_mat2x4.hpp
        libs/glm/glm/detail/type_mat2x4.inl
        libs/glm/glm/detail/type_mat3x2.hpp
        libs/glm/glm/detail/type_mat3x2.inl
        libs/glm/glm/detail/type_mat3x3.hpp
        libs/glm/glm/detail/type_mat3x3.inl
        libs/glm/glm/detail/type_mat3x4.hpp
        libs/glm/glm/detail/type_mat3x4.inl
        libs/glm/glm/detail/type_mat4x2.hpp
        libs/glm/glm/detail/type_mat4x2.inl
        libs/glm/glm/detail/type_mat4x3.hpp
        libs/glm/glm/detail/type_mat4x3.inl
        libs/glm/glm/detail/type_mat4x4.hpp
        libs/glm/glm/detail/type_mat4x4.inl
        libs/glm/glm/detail/type_vec.hpp
        libs/glm/glm/detail/type_vec.inl
        libs/glm/glm/detail/type_vec1.hpp
        libs/glm/glm/detail/type_vec1.inl
        libs/glm/glm/detail/type_vec2.hpp
        libs/glm/glm/detail/type_vec2.inl
        libs/glm/glm/detail/type_vec3.hpp
        libs/glm/glm/detail/type_vec3.inl
        libs/glm/glm/detail/type_vec4.hpp
        libs/glm/glm/detail/type_vec4.inl
        libs/glm/glm/gtc/constants.hpp
        libs/glm/glm/gtc/constants.inl
        libs/glm/glm/gtc/epsilon.hpp
        libs/glm/glm/gtc/epsilon.inl
        libs/glm/glm/gtc/matrix_access.hpp
        libs/glm/glm/gtc/matrix_access.inl
        libs/glm/glm/gtc/matrix_integer.hpp
        libs/glm/glm/gtc/matrix_inverse.hpp
        libs/glm/glm/gtc/matrix_inverse.inl
        libs/glm/glm/gtc/matrix_transform.hpp
        libs/glm/glm/gtc/matrix_transform.inl
        libs/glm/glm/gtc/noise.hpp
        libs/glm/glm/gtc/noise.inl
        libs/glm/glm/gtc/packing.hpp
        libs/glm/glm/gtc/packing.inl
        libs/glm/glm/gtc/quaternion.hpp
        libs/glm/glm/gtc/quaternion.inl
        libs/glm/glm/gtc/random.hpp
        libs/glm/glm/gtc/random.inl
        libs/glm/glm/gtc/reciprocal.hpp
        libs/glm/glm/gtc/reciprocal.inl
        libs/glm/glm/gtc/type_precision.hpp
        libs/glm/glm/gtc/type_precision.inl
        libs/glm/glm/gtc/type_ptr.hpp
        libs/glm/glm/gtc/type_ptr.inl
        libs/glm/glm/gtc/ulp.hpp
        libs/glm/glm/gtc/ulp.inl
        libs/glm/glm/gtx/associated_min_max.hpp
        libs/glm/glm/gtx/associated_min_max.inl
        libs/glm/glm/gtx/bit.hpp
        libs/glm/glm/gtx/bit.inl
        libs/glm/glm/gtx/closest_point.hpp
        libs/glm/glm/gtx/closest_point.inl
        libs/glm/glm/gtx/color_space.hpp
        libs/glm/glm/gtx/color_space.inl
        libs/glm/glm/gtx/color_space_YCoCg.hpp
        libs/glm/glm/gtx/color_space_YCoCg.inl
        libs/glm/glm/gtx/compatibility.hpp
        libs/glm/glm/gtx/compatibility.inl
        libs/glm/glm/gtx/component_wise.hpp
        libs/glm/glm/gtx/component_wise.inl
        libs/glm/glm/gtx/constants.hpp
        libs/glm/glm/gtx/dual_quaternion.hpp
        libs/glm/glm/gtx/dual_quaternion.inl
        libs/glm/glm/gtx/epsilon.hpp
        libs/glm/glm/gtx/euler_angles.hpp
        libs/glm/glm/gtx/euler_angles.inl
        libs/glm/glm/gtx/extend.hpp
        libs/glm/glm/gtx/extend.inl
        libs/glm/glm/gtx/extented_min_max.hpp
        libs/glm/glm/gtx/extented_min_max.inl
        libs/glm/glm/gtx/fast_exponential.hpp
        libs/glm/glm/gtx/fast_exponential.inl
        libs/glm/glm/gtx/fast_square_root.hpp
        libs/glm/glm/gtx/fast_square_root.inl
        libs/glm/glm/gtx/fast_trigonometry.hpp
        libs/glm/glm/gtx/fast_trigonometry.inl
        libs/glm/glm/gtx/gradient_paint.hpp
        libs/glm/glm/gtx/gradient_paint.inl
        libs/glm/glm/gtx/handed_coordinate_space.hpp
        libs/glm/glm/gtx/handed_coordinate_space.inl
        libs/glm/glm/gtx/inertia.hpp
        libs/glm/glm/gtx/inertia.inl
        libs/glm/glm/gtx/int_10_10_10_2.hpp
        libs/glm/glm/gtx/int_10_10_10_2.inl
        libs/glm/glm/gtx/integer.hpp
        libs/glm/glm/gtx/integer.inl
        libs/glm/glm/gtx/intersect.hpp
        libs/glm/glm/gtx/intersect.inl
        libs/glm/glm/gtx/io.hpp
        libs/glm/glm/gtx/io.inl
        libs/glm/glm/gtx/log_base.hpp
        libs/glm/glm/gtx/log_base.inl
        libs/glm/glm/gtx/matrix_cross_product.hpp
        libs/glm/glm/gtx/matrix_cross_product.inl
        libs/glm/glm/gtx/matrix_interpolation.hpp
        libs/glm/glm/gtx/matrix_interpolation.inl
        libs/glm/glm/gtx/matrix_major_storage.hpp
        libs/glm/glm/gtx/matrix_major_storage.inl
        libs/glm/glm/gtx/matrix_operation.hpp
        libs/glm/glm/gtx/matrix_operation.inl
        libs/glm/glm/gtx/matrix_query.hpp
        libs/glm/glm/gtx/matrix_query.inl
        libs/glm/glm/gtx/matrix_transform_2d.hpp
        libs/glm/glm/gtx/matrix_transform_2d.inl
        libs/glm/glm/gtx/mixed_product.hpp
        libs/glm/glm/gtx/mixed_product.inl
        libs/glm/glm/gtx/multiple.hpp
        libs/glm/glm/gtx/multiple.inl
        libs/glm/glm/gtx/noise.hpp
        libs/glm/glm/gtx/norm.hpp
        libs/glm/glm/gtx/norm.inl
        libs/glm/glm/gtx/normal.hpp
        libs/glm/glm/gtx/normal.inl
        libs/glm/glm/gtx/normalize_dot.hpp
        libs/glm/glm/gtx/normalize_dot.inl
        libs/glm/glm/gtx/number_precision.hpp
        libs/glm/glm/gtx/number_precision.inl
        libs/glm/glm/gtx/optimum_pow.hpp
        libs/glm/glm/gtx/optimum_pow.inl
        libs/glm/glm/gtx/orthonormalize.hpp
        libs/glm/glm/gtx/orthonormalize.inl
        libs/glm/glm/gtx/perpendicular.hpp
        libs/glm/glm/gtx/perpendicular.inl
        libs/glm/glm/gtx/polar_coordinates.hpp
        libs/glm/glm/gtx/polar_coordinates.inl
        libs/glm/glm/gtx/projection.hpp
        libs/glm/glm/gtx/projection.inl
        libs/glm/glm/gtx/quaternion.hpp
        libs/glm/glm/gtx/quaternion.inl
        libs/glm/glm/gtx/random.hpp
        libs/glm/glm/gtx/raw_data.hpp
        libs/glm/glm/gtx/raw_data.inl
        libs/glm/glm/gtx/reciprocal.hpp
        libs/glm/glm/gtx/rotate_normalized_axis.hpp
        libs/glm/glm/gtx/rotate_normalized_axis.inl
        libs/glm/glm/gtx/rotate_vector.hpp
        libs/glm/glm/gtx/rotate_vector.inl
        libs/glm/glm/gtx/scalar_relational.hpp
        libs/glm/glm/gtx/scalar_relational.inl
        libs/glm/glm/gtx/simd_mat4.hpp
        libs/glm/glm/gtx/simd_mat4.inl
        libs/glm/glm/gtx/simd_quat.hpp
        libs/glm/glm/gtx/simd_quat.inl
        libs/glm/glm/gtx/simd_vec4.hpp
        libs/glm/glm/gtx/simd_vec4.inl
        libs/glm/glm/gtx/spline.hpp
        libs/glm/glm/gtx/spline.inl
        libs/glm/glm/gtx/std_based_type.hpp
        libs/glm/glm/gtx/std_based_type.inl
        libs/glm/glm/gtx/string_cast.hpp
        libs/glm/glm/gtx/string_cast.inl
        libs/glm/glm/gtx/transform.hpp
        libs/glm/glm/gtx/transform.inl
        libs/glm/glm/gtx/transform2.hpp
        libs/glm/glm/gtx/transform2.inl
        libs/glm/glm/gtx/ulp.hpp
        libs/glm/glm/gtx/unsigned_int.hpp
        libs/glm/glm/gtx/unsigned_int.inl
        libs/glm/glm/gtx/vec1.hpp
        libs/glm/glm/gtx/vec1.inl
        libs/glm/glm/gtx/vector_angle.hpp
        libs/glm/glm/gtx/vector_angle.inl
        libs/glm/glm/gtx/vector_query.hpp
        libs/glm/glm/gtx/vector_query.inl
        libs/glm/glm/gtx/wrap.hpp
        libs/glm/glm/gtx/wrap.inl
        libs/glm/glm/common.hpp
        libs/glm/glm/exponential.hpp
        libs/glm/glm/ext.hpp
        libs/glm/glm/fwd.hpp
        libs/glm/glm/geometric.hpp
        libs/glm/glm/glm.hpp
        libs/glm/glm/integer.hpp
        libs/glm/glm/mat2x2.hpp
        libs/glm/glm/mat2x3.hpp
        libs/glm/glm/mat2x4.hpp
        libs/glm/glm/mat3x2.hpp
        libs/glm/glm/mat3x3.hpp
        libs/glm/glm/mat3x4.hpp
        libs/glm/glm/mat4x2.hpp
        libs/glm/glm/mat4x3.hpp
        libs/glm/glm/mat4x4.hpp
        libs/glm/glm/matrix.hpp
        libs/glm/glm/packing.hpp
        libs/glm/glm/trigonometric.hpp
        libs/glm/glm/vec2.hpp
        libs/glm/glm/vec3.hpp
        libs/glm/glm/vec4.hpp
        libs/glm/glm/vector_relational.hpp
        src/phony/fwk/estate.cpp
        src/phony/fwk/estate.hpp
        src/phony/fwk/game.cpp
        src/phony/fwk/game.hpp
        src/phony/fwk/gstate.hpp
        src/phony/fwk/gstatea.cpp
        src/phony/fwk/gstatea.hpp
        src/phony/fwk/lgstate.hpp
        src/phony/fwk/mgrbase.hpp
        src/phony/fwk/scene.cpp
        src/phony/fwk/scene.hpp
        src/phony/fwk/smgr.cpp
        src/phony/fwk/smgr.hpp
        src/phony/fwk/stmgr.hpp
        src/phony/fwk/tmgr.cpp
        src/phony/fwk/tmgr.hpp
        src/phony/util/camera.cpp
        src/phony/util/camera.hpp
        src/phony/util/light.cpp
        src/phony/util/light.hpp
        src/phony/util/lscape.cpp
        src/phony/util/lscape.hpp
        src/phony/util/luaconf.cpp
        src/phony/util/luaconf.hpp
        src/phony/util/perlin.cpp
        src/phony/util/perlin.hpp
        src/phony/util/prim.cpp
        src/phony/util/prim.hpp
        src/phony/util/rgba.cpp
        src/phony/util/rgba.hpp
        src/phony/util/strutil.cpp
        src/phony/util/strutil.hpp
        src/phony/util/text.cpp
        src/phony/util/text.hpp
        src/phony/util/tga.cpp
        src/phony/util/tga.hpp
        src/phony/util/timer.hpp
        src/phony/util/tweener.hpp
        src/phony/phony.hpp
        src/phony/stdinc.hpp
        src/gmain.cpp)


target_link_libraries(phony ${SDL2_LIBRARIES} ${SDL2MIXER_LIBRARIES} ${SDL2TTF_LIBRARIES} ${LUA_LIBRARIES} -lGL -lGLU -lpthread -ldl)
target_include_directories(phony PUBLIC ${SDL2_INCLUDE_DIRS} ${LUA_INCLUDE_DIRS} libs/glm)
target_compile_options(phony PUBLIC -Wall -fPIC ${SDL2_CFLAGS_OTHER} ${SDL2MIXER_CFLAGS_OTHER} ${LUA_CFLAGS_OTHER})

